fix(basic-resume): path landscape orientation font-size on safari mobile

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: monospace;
+  -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
